--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <meta property="og:title" content="Komali's URL Forwarder" />
     <meta property="og:type" content="website" />
@@ -9,31 +10,48 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="https://komali.dev/main.css">
-    <style>#main{
-        margin-top: 10%;
-    }</style>
+    <style>
+        @font-face {font-family: 'Ubuntu Mono'; src: url(https://koma.li/UbuntuMono-Bold.ttf)}
+        #main {
+            margin-top: 10%;
+        }
+        #links {
+            font-family: 'Ubuntu Mono', monospace;
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
     <div id="main">
-    <div id="inner">
-        <h1 id=w>Not sure how you got here...</h1>
+        <div id="inner">
+            <h1 id=w></h1>
+            <div id="links">
+
+            </div>
+        </div>
     </div>
-</div>
     <script>
         let links = {
-            "#": "https://komali.dev",
-            "#t": "https://twitch.tv/komali09",
-            "#b": "https://twitch.tv/botwcollective",
-            "#y": "https://youtube.com/c/KomaliPrinceOfRito",
-            "#d": "https://discord.gg/QWCcXMe",
-            "#p": "https://periwinke.sh",
-            "#u": "https://underscore.wtf"
+            "?": "https://komali.dev",
+            "?t": "https://twitch.tv/komali09",
+            "?b": "https://twitch.tv/botwcollective",
+            "?y": "https://youtube.com/c/KomaliPrinceOfRito",
+            "?d": "https://discord.gg/QWCcXMe",
+            "?p": "https://periwinke.sh",
+            "?u": "https://underscore.wtf",
+            "?bsr": "https://discord.gg/bMa8HftCj3"
         }
         let hash = window.location.toString().split(window.location.pathname).pop();
-        if(links[hash]) window.location.href = links[hash];
+        if (links[hash]) window.location.href = links[hash];
         else {
-            if(hash == '') w.innerText = "Not really anything here..."
-            else w.innerText = hash +  " not found! Try another hash..."
+            if (hash == '') w.innerText = "Not really anything here..."
+            else w.innerText = hash + " not found! Try another url..."
+        }
+        window.onload = _ => {
+            for(i of Object.keys(links)) {
+                document.querySelector("#links").innerHTML += `<br><a href='https://koma.li/${i}'><span style='color:#1a7ce2'>koma.li/<span style='color:#26c983'>${i}</span></span></a> ${'&nbsp'.repeat(5-i.length)}-> &nbsp;&nbsp<a href='${links[i]}'>${links[i].split("://")[1]}</a>`
+            }
         }
     </script>
 </body>
