--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel='shortcut icon' href='https://komali.dev/komali2Lurk.png'>
     <meta property="og:title" content="Komali's URL Forwarder" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://koma.li" />
@@ -38,7 +39,7 @@
             "?b": "https://twitch.tv/botwcollective",
             "?y": "https://youtube.com/c/KomaliPrinceOfRito",
             "?d": "https://discord.gg/QWCcXMe",
-            "?p": "https://periwinke.sh",
+            "?p": "https://periwinkle.sh",
             "?u": "https://underscore.wtf",
             "?bsr": "https://discord.gg/bMa8HftCj3"
         }
