--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel='shortcut icon' href='https://komali.dev/komali2Lurk.png'>
     <meta property="og:title" content="Komali's URL Forwarder" />
+    <title>Komali's URL Forwarder</title>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://koma.li" />
     <meta property="og:image" content="https://komali.dev/stella_lurk.png" />
@@ -41,7 +42,8 @@
             "?d": "https://discord.gg/QWCcXMe",
             "?p": "https://periwinkle.sh",
             "?u": "https://underscore.wtf",
-            "?bsr": "https://discord.gg/bMa8HftCj3"
+            "?bsr": "https://discord.gg/bMa8HftCj3",
+            "?shr": "https://discord.gg/p38n5tk"
         }
         let hash = window.location.toString().split(window.location.pathname).pop();
         if (links[hash]) window.location.href = links[hash];
