--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#1A7CE2">
 
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="stylesheet" href="https://komali.dev/main.css">
+    <link rel="stylesheet" href="main.css">
     <style>
         @font-face {font-family: 'Ubuntu Mono'; src: url(https://koma.li/UbuntuMono-Bold.ttf)}
         #main {
