change link style

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         window.onload = _ => {
             for(i of Object.keys(links)) {
                 document.querySelector("#links").innerHTML += `
-                <a href='https://koma.li/${i}'>koma.li/<span class="green">${i}</span></a>${'&nbsp'.repeat(6-i.length)}<br class="no_break">->&nbsp;&nbsp;<a href="${links[i]}">${links[i].split("://")[1]}</a><br class="no_break"><br>`
+                <a href='https://koma.li/${i}'>koma.li<span class="green">/${i}</span></a>${'&nbsp'.repeat(6-i.length)}<br class="no_break">->&nbsp;&nbsp;<a href="${links[i]}">${links[i].split("://")[1]}</a><br class="no_break"><br>`
             }
         }
     </script>
