--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div id="main">
         <div id="inner">
+            <a href="https://github.com/SurprisedPikaa/" class="plug">CSS By Pika</a>
             <div id="content">
                 <h1 id=w></h1>
             </div>
