--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel='shortcut icon' href='https://komali.dev/komali2Lurk.png'>
     <meta property="og:title" content="Komali's URL Forwarder" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Komali's URL Forwarder</title>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://koma.li" />
