decrease file size of cat image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 w.innerText = "Your link is in another castle!"
                 document.querySelector("#content").innerHTML += `
                 <p>Here's a cat instead</p>
-                <img src="cat.png" alt="a cat">
+                <img src="cat.webp" alt="a cat">
                 <p>Maybe try one of these:</p>
                 `
             }
