--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             "?p": "https://periwinkle.sh",
             "?u": "https://underscore.wtf",
             "?bsr": "https://discord.gg/bMa8HftCj3",
-            "?shr": "https://discord.gg/p38n5tk"
+            "?shr": "https://discord.gg/p38n5tk",
+            "?ilt": "https://komali.dev/BotW-IL-Timer"
         }
         let hash = window.location.toString().split(window.location.pathname).pop();
         if (links[hash]) window.location.href = links[hash];
