fixes for when there is a query, but it is incorrect

--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
         let hash = window.location.toString().split(window.location.pathname).pop();
         if (links[hash]) window.location.href = links[hash];
         else {
-            if (hash == '') {
-                document.querySelector(".content").innerHTML += `
-                <h1>Your link is in another castle!</h1>
+            if (hash == '') {document.querySelector(".content").innerHTML += `<h1>Your link is in another castle!</h1>`}
+            else document.querySelector(".content").innerHTML += "<h1>\"" + hash.substr(1) + "\" not found!" + "</h1>"
+
+            document.querySelector(".content").innerHTML += `
                 <p>Here's a cat instead</p>
                 <img src="cat.webp" alt="a cat">
-                <p>Maybe try one of these:</p>
-                `
-            }
-            else document.querySelector(".content").innerHTML += "<h1>" + hash + " not found! Try another url..." + "</h1>"
+                <p>Maybe try one of these:</p>`
         }
         window.onload = _ => {
             for(i of Object.keys(links)) {
